[ ✅ | #26 | test ] 유저 테스트 코드 작성
2024.08.04